criada as section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header></header>
+    <section class="banner"></section>
+    <section class="Design"></section>
+    <section class="Como-funciona"></section>
+    <section class="Demandas"></section>
+    <footer></footer>
 </body>
 </html>
