inclusão de css, js e pasta img

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    
+    <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="css/como-funciona.css">
+    <link rel="stylesheet" href="css/demandas.css">
+    <link rel="stylesheet" href="css/footer.css">
+
+    <script src="script.js"></script>
+
+    <title>Faster</title>
 </head>
 <body>
     <header></header>
