inclusão da minha section 'design'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,44 @@
 <body>
     <header></header>
     <section class="banner"></section>
-    <section class="Design"></section>
+    <section class="design">
+        <hr>
+        <div class="superior">
+            <div class="titulo">Design como você nunca viu</div>
+            <div class="linha">
+                <div class="icone">
+                    <img src="img/design/tiagolimar-img-00.svg" alt="icone 01" class="imagem">
+                    <h1 class="icone-titulo">Mais barato</h1>
+                    <h2 class="icone-subtitulo">1/4 do custo de uma <br>agência tradicional.</h2>
+                </div>
+                <div class="icone">
+                    <img src="img/design/tiagolimar-img-01.svg" alt="icone 01" class="imagem">
+                    <h1 class="icone-titulo">Mais rápido</h1>
+                    <h2 class="icone-subtitulo">Entregas em menos <br>de 24 horas.</h2>
+                </div>
+                <div class="icone">
+                    <img src="img/design/tiagolimar-img-02.svg" alt="icone 01" class="imagem">
+                    <h1 class="icone-titulo">Mais fácil</h1>
+                    <h2 class="icone-subtitulo">Briefings em menos <br>de 20 minutos.</h2>
+                </div>
+                <div class="icone">
+                    <img src="img/design/tiagolimar-img-03.svg" alt="icone 01" class="imagem">
+                    <h1 class="icone-titulo">Mais confiável</h1>
+                    <h2 class="icone-subtitulo">Time multidisciplinar <br>que garante as entregas.</h2>
+                </div>
+                <div class="icone">
+                    <img src="img/design/tiagolimar-img-04.svg" alt="icone 01" class="imagem">
+                    <h1 class="icone-titulo">Tempo de contratação</h1>
+                    <h2 class="icone-subtitulo">De 60-90 dias <br>para 24 horas.</h2>
+                </div>
+            </div>
+        </div>
+        <div class="inferior">
+            <h1 class="inferior-titulo"></h1>
+            <div class="lista"></div>
+            <h2 class="inferior-rodape"></h2>
+        </div>
+    </section>
     <section class="Como-funciona"></section>
     <section class="Demandas"></section>
     <footer></footer>
