--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     
     <section class="Como-funciona"></section>
     <section class="Demandas"></section>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 </html>
