--- a/index.html
+++ b/index.html
@@ -71,8 +71,22 @@
     
     <section class="Como-funciona"></section>
     <section class="Demandas"></section>
-    <footer>
-        
+    <footer class="footer-main">
+        <div class="footer-main-area">
+            <div class="container">
+                <img src="../FS14EQUIPE2/img/footer/footer-logo.svg" alt="Logo Faster">
+            </div>
+        <nav class="footer-nav">
+            <ul>
+                <li>Home</li>
+                <li>Como Funciona</li>
+                <li>Sobre Nós</li>
+            </ul>
+        </nav>
+        </div>
+        <div>
+            <p>© 2023 Faster. Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
