conclusão do html e css da seção design

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             </div>
         </div>
         <div class="inferior">
-            <h1 class="inferior-titulo">Confiam na<img src="img/design/logo-faster.svg" alt=""></h1>
+            <h1 class="inferior-titulo">Confiam na <img src="img/design/logo-faster.svg" alt=""></h1>
             <div class="lista-logo">
-                <div class="logo"><img src="img/design/ambev.svg" alt=""></div>
-                <div class="logo"><img src="img/design/warner.svg" alt=""></div>
-                <div class="logo"><img src="img/design/forno.svg" alt=""></div>
-                <div class="logo"><img src="img/design/loreal.svg" alt=""></div>
-                <div class="logo"><img src="img/design/sap.svg" alt=""></div>
-                <div class="logo"><img src="img/design/hotmart.svg" alt=""></div>
-                <div class="logo"><img src="img/design/tetra-pak.svg" alt=""></div>
-                <div class="logo"><img src="img/design/ifood.svg" alt=""></div>
+                <div class="logo"><img id="design-logo-01" src="img/design/ambev.svg" alt="logo ambev"></div>
+                <div class="logo"><img id="design-logo-02" src="img/design/warner.svg" alt="logo warner"></div>
+                <div class="logo"><img id="design-logo-03" src="img/design/forno.svg" alt="logo forno"></div>
+                <div class="logo"><img id="design-logo-04" src="img/design/loreal.svg" alt="logo loreal"></div>
+                <div class="logo"><img id="design-logo-05" src="img/design/sap.svg" alt="logo sap"></div>
+                <div class="logo"><img id="design-logo-06" src="img/design/hotmart.svg" alt="logo hotmart"></div>
+                <div class="logo"><img id="design-logo-07" src="img/design/tetra-pak.svg" alt="logo tetra-pak"></div>
+                <div class="logo"><img id="design-logo-08" src="img/design/ifood.svg" alt="logo ifood"></div>
             </div>
             <h2 class="inferior-rodape">+ outras 70 empresas incríveis</h2>
         </div>
