--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/main.css">
     
     <link rel="stylesheet" href="css/banner.css">
@@ -54,23 +55,31 @@
             </div>
         </div>
         <div class="inferior">
-            <h1 class="inferior-titulo">Confiam na <img src="img/design/logo-faster.svg" alt=""></h1>
+            <h1 class="inferior-titulo" data-aos="fade-up">Confiam na <img src="img/design/logo-faster.svg" alt=""></h1>
             <div class="lista-logo">
-                <div class="logo"><img id="design-logo-01" src="img/design/ambev.svg" alt="logo ambev"></div>
-                <div class="logo"><img id="design-logo-02" src="img/design/warner.svg" alt="logo warner"></div>
-                <div class="logo"><img id="design-logo-03" src="img/design/forno.svg" alt="logo forno"></div>
-                <div class="logo"><img id="design-logo-04" src="img/design/loreal.svg" alt="logo loreal"></div>
-                <div class="logo"><img id="design-logo-05" src="img/design/sap.svg" alt="logo sap"></div>
-                <div class="logo"><img id="design-logo-06" src="img/design/hotmart.svg" alt="logo hotmart"></div>
-                <div class="logo"><img id="design-logo-07" src="img/design/tetra-pak.svg" alt="logo tetra-pak"></div>
-                <div class="logo"><img id="design-logo-08" src="img/design/ifood.svg" alt="logo ifood"></div>
+                <div class="logo" data-aos="fade-up"><img id="design-logo-01" src="img/design/ambev.svg" alt="logo ambev"></div>
+                <div class="logo" data-aos="fade-up" data-aos-delay="100"><img id="design-logo-02" src="img/design/warner.svg" alt="logo warner"></div>
+                <div class="logo" data-aos="fade-up" data-aos-delay="200"><img id="design-logo-03" src="img/design/forno.svg" alt="logo forno"></div>
+                <div class="logo" data-aos="fade-up" data-aos-delay="300"><img id="design-logo-04" src="img/design/loreal.svg" alt="logo loreal"></div>
+                <div class="logo" data-aos="fade-up"><img id="design-logo-05" src="img/design/sap.svg" alt="logo sap"></div>
+                <div class="logo" data-aos="fade-up" data-aos-delay="100"><img id="design-logo-06" src="img/design/hotmart.svg" alt="logo hotmart"></div>
+                <div class="logo" data-aos="fade-up" data-aos-delay="200"><img id="design-logo-07" src="img/design/tetra-pak.svg" alt="logo tetra-pak"></div>
+                <div class="logo" data-aos="fade-up" data-aos-delay="300"><img id="design-logo-08" src="img/design/ifood.svg" alt="logo ifood"></div>
             </div>
-            <h2 class="inferior-rodape">+ outras 70 empresas incríveis</h2>
+            <h2 class="inferior-rodape" data-aos="fade-up">+ outras 70 empresas incríveis</h2>
         </div>
     </section>
     
     <section class="Como-funciona"></section>
     <section class="Demandas"></section>
     <footer></footer>
+
+    <!-- isso é para incluir animações 'on scroll' no site -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            once: true
+        });
+    </script>
 </body>
 </html>
