criação de uma nova branch sarah

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
         </div>
     </section>
     
-    <section class="Como-funciona"></section>
+    <section class="Como-funciona">
+        
+
+    </section>
+
     <section class="Demandas"></section>
     <footer></footer>
 
