primeira parte da demanda

--- a/index.html
+++ b/index.html
@@ -71,7 +71,78 @@
     </section>
     
     <section class="Como-funciona"></section>
-    <section class="Demandas"></section>
+    <section class="demanda">
+    <div class="container">
+        <h2 class="titulo-h2 dark centro demanda-titulo">Atendemos todas as suas demandas de design</h2>
+        <div class="demanda-lista">
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/social-media.svg" alt="social-media">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Social Media</p>
+                </div>
+            </div>
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/comunicacao-interna.svg" alt="comunicacao-interna">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Comunicação Interna</p>
+                </div>
+            </div>
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/banners.svg" alt="banners">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Banners</p>
+                </div>
+            </div>
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/apresentacoes.svg" alt="apresentacoes">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Apresentações</p>
+                </div>
+            </div>
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/papelaria.svg" alt="papelaria">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Papelaria</p>
+                </div>
+            </div>
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/identidade-visual.svg" alt="identidade-visual">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Identidade Visual</p>
+                </div>
+            </div>
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/solucoes-criativas.svg" alt="solucoes-criativas">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Soluções Criativas</p>
+                </div>
+            </div>
+            <div class="demanda-item">
+                <div class="demanda-item-imagem">
+                    <img src="img/demandas/desdobramentos.svg" alt="desdobramentos">
+                </div>
+                <div class="demanda-item-info">
+                    <p>Desdobramentos</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    </div>
     <footer></footer>
 
     <!-- isso é para incluir animações 'on scroll' no site -->
