--- a/index.html
+++ b/index.html
@@ -71,57 +71,66 @@
         </div>
     </section>
     
-    <section class="Ideal-para">
+    <section class="ideal-para">
         <div class="idealpara"> 
-            <div class="idealpara-img">
+            <div class="idealpara-img" data-aos="fade-up">
                 <img src="./img/ideal-para/ideal-para.d423e8d.svg" alt="">
             </div>
-            <div class="idealpara-coments">
-                <h2>Ideal para</h2>
+            <div class="idealpara-coments" data-aos="fade-up">
+                <h2 class="idealpara-coments-h2">Ideal para</h2>
                 <div>
-                    <h3>Empresas com equipes enxutas</h3>
-                    <p>Tenha um time de designers profissionais, sem as dores de aumentar headcount.</p>
+                    <h3 class="idealpara-coments-h3">Empresas com equipes enxutas</h3>
+                    <p class="idealpara-coments-p">Tenha um time de designers profissionais, sem as dores de aumentar <i>headcount</i>.</p>
                 </div>
                 <div>
-                    <h3>Times de Marketing</h3>
-                    <p>Com alta demanda de design gráfico, sabemos o quão difícil é escalar a produção e estamos a postos para ajudá-los.</p>
+                    <h3 class="idealpara-coments-h3">Times de Marketing</h3>
+                    <p class="idealpara-coments-p">Com alta demanda de design gráfico, sabemos o quão difícil é escalar a produção e estamos a postos para ajudá-los.</p>
                 </div>
                 <div>
-                    <h3>Times de Comunicação</h3>
-                    <p>Deixe conosco a criação de peças e dedique mais tempo para pensar em estratégias incríveis.</p>
+                    <h3 class="idealpara-coments-h3">Times de Comunicação</h3>
+                    <p class="idealpara-coments-p">Deixe conosco a criação de peças e dedique mais tempo para pensar em estratégias incríveis.</p>
                 </div>
                 <div>
-                    <h3>Time de Pessoas</h3>
-                    <p>Invista seus esforços em encantar seu time enquanto produzimos peças de design de tirar o fôlego.</p>
+                    <h3 class="idealpara-coments-h3">Time de Pessoas</h3>
+                    <p class="idealpara-coments-p">Invista seus esforços em encantar seu time enquanto produzimos peças de design de tirar o fôlego.</p>
                 </div>
                 <div>
-                    <h3>Qualquer Empresa</h3>
-                    <p>Que precise de uma ajuda extra para produzir todas as demandas de comunicação visual.</p>
+                    <h3 class="idealpara-coments-h3">Qualquer Empresa</h3>
+                    <p class="idealpara-coments-p">Que precise de uma ajuda extra para produzir todas as demandas de comunicação visual.</p>
                 </div>
                 <div>
-                    <h3>Agências de Publicidade</h3>
-                    <p>Somos o parceiro ideal para ajudar agências com picos de demanda na produção de design gráfico para grandes campanhas.</p>
+                    <h3 class="idealpara-coments-h3">Agências de Publicidade</h3>
+                    <p class="idealpara-coments-p">Somos o parceiro ideal para ajudar agências com picos de demanda na produção de design gráfico para grandes campanhas.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="Como-funciona">
-        <div class="comofunciona"> 
-            <img src="./img/como-funciona/como-funciona.1aa4b29.svg" alt="">
-            <p>Ao invés de depender de freelancers que não conhecem a fundo seu time e de agências que podem comprometer seu orçamento anual, sem atender a agilidade que sua equipe precisa, mais de 70 empresas já usam a Faster para otimizar suas equipes de comunicação. Deixe que a gente cuide da produção de peças de design gráfico.</p>
-            <p>Escolha o melhor plano para seu time e saia pedindo peças de design com qualidade e velocidade.</p>
-            <div class="comofunciona-lista">
-                <ol>
-                    <li>Marque uma<strong> call de 20 minutos</strong> com nosso time e conte um pouco mais sobre suas necessidades com design gráfico.</li>
-                    <li><strong>Escolha um plano</strong>que melhor se adeque à sua realidade.</li>
-                    <li>Em menos de <strong>1 dia</strong>você já pode pedir qualquer peça de design para executar suas estratégias.</li>
-                    <li><strong>Gerencie tudo através de uma plataforma</strong>de alto nível como você nunca viu antes.</li>
-                </ol>
+    <section class="como-funciona">
+        <div class="comofunciona-geral" data-aos="fade-up"> 
+            <div class="comofunciona-text">
+                <h1 class="comofunciona-h1">Como Funciona</h1>
+                <p class="comofunciona-text-p">Ao invés de depender de freelancers que não conhecem a fundo seu time e de agências que podem comprometer seu orçamento anual, sem atender a agilidade que sua equipe precisa, mais de 70 empresas já usam a Faster para otimizar suas equipes de comunicação. Deixe que a gente cuide da produção de peças de design gráfico.</p>
+                <p class="comofunciona-text-p">Escolha o melhor plano para seu time e saia pedindo peças de design com qualidade e velocidade.</p>
             </div>
-            <a href="">
-                <button>Agende uma apresentação de 20-min</button>
-            </a>
+            <div class="comofunciona-combo" data-aos="fade-up">
+                <div class="comofunciona-lista-img">
+                    <img src="./img/como-funciona/como-funciona.1aa4b29.svg" alt="">
+                </div>
+                <div class="comofunciona-lista">
+                    <ol class="comofunciona-lista-ol">
+                        <li>Marque uma<strong> call de 20 minutos</strong> com nosso time e conte um pouco mais sobre suas necessidades com design gráfico.</li>
+                        <li><strong >Escolha um plano</strong> que melhor se adeque à sua realidade.</li>
+                        <li>Em menos de <strong>1 dia</strong> você já pode pedir qualquer peça de design para executar suas estratégias.</li>
+                        <li><strong>Gerencie tudo através de uma plataforma</strong> de alto nível como você nunca viu antes.</li>
+                    </ol>
+                    <div class="comofunciona-botao">
+                        <a href="">
+                            <button>Agende uma apresentação de 20-min</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
