--- a/index.html
+++ b/index.html
@@ -141,8 +141,43 @@
             </div>
         </div>
     </section>
-
     </div>
+
+        <div class="testemunho">
+            <div class="testemunho-box">
+                <div class="testemunho-box-imagem">
+                    <img src="img/demandas/rodrigo-murad.webp" alt="rodrigo-murad">
+                    <div class="testemunho-box-info">
+                        <p>
+                            <strong>Rodrigo Murad</strong>
+                        </p>
+                        <p>Diretor de Marketing na SAP.</p>
+                    </div>
+                </div>
+                <div class="testemunho-box-capa">
+                    <button slot="button-prev" class="arrow-prev">anterior</button>
+                    <button slot="button-next" class="arrow-next">próximo</button>
+                    <div class="testemunho-box-capa-texto">
+                    <p>
+                        A Faster trouxe muita eficiência e agilidade a 
+                        um processo que era muito complicado e 
+                        demandava muito tempo e esforço de nossa equipe.
+                    </p>
+                    <p>
+                        Além da dificuldade de gerenciar múltiplos 
+                        fornecedores que muitas vezes pediram prazos enormes 
+                        e diversos retrabalhos para executar assets simples.
+                    </p>
+                    <p>
+                        Além disso, o modelo de contratação facilitou muito 
+                        o processo. O ponto mais importante de tudo isso é o 
+                        excelente ROI que a Faster trouxe para a SAP Concur.
+                    </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <footer></footer>
 
     <!-- isso é para incluir animações 'on scroll' no site -->
