--- a/index.html
+++ b/index.html
@@ -4,89 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="css/main.css">
-    
-    <link rel="stylesheet" href="css/banner.css">
-    <link rel="stylesheet" href="css/design.css">
-    <link rel="stylesheet" href="css/como-funciona.css">
-    <link rel="stylesheet" href="css/demandas.css">
     <link rel="stylesheet" href="css/footer.css">
-
-    <script src="script.js"></script>
-
     <title>Faster</title>
 </head>
 <body>
-    <header></header>
-    <section class="banner"></section>
-
-    <section class="design">
-        <hr>
-        <div class="superior">
-            <div class="titulo">Design como você nunca viu</div>
-            <div class="linha">
-                <div class="icone">
-                    <img src="img/design/00.svg" alt="icone 01" class="imagem">
-                    <h1 class="icone-titulo">Mais barato</h1>
-                    <h2 class="icone-subtitulo">1/4 do custo de uma <br>agência tradicional.</h2>
-                </div>
-                <div class="icone">
-                    <img src="img/design/01.svg" alt="icone 01" class="imagem">
-                    <h1 class="icone-titulo">Mais rápido</h1>
-                    <h2 class="icone-subtitulo">Entregas em menos <br>de 24 horas.</h2>
-                </div>
-                <div class="icone">
-                    <img src="img/design/02.svg" alt="icone 01" class="imagem">
-                    <h1 class="icone-titulo">Mais fácil</h1>
-                    <h2 class="icone-subtitulo">Briefings em menos <br>de 20 minutos.</h2>
-                </div>
-                <div class="icone">
-                    <img src="img/design/03.svg" alt="icone 01" class="imagem">
-                    <h1 class="icone-titulo">Mais confiável</h1>
-                    <h2 class="icone-subtitulo">Time multidisciplinar <br>que garante as entregas.</h2>
-                </div>
-                <div class="icone">
-                    <img src="img/design/04.svg" alt="icone 01" class="imagem">
-                    <h1 class="icone-titulo">Tempo de contratação</h1>
-                    <h2 class="icone-subtitulo">De 60-90 dias <br>para 24 horas.</h2>
-                </div>
-            </div>
-        </div>
-        <div class="inferior">
-            <h1 class="inferior-titulo">Confiam na<img src="img/design/logo-faster.svg" alt=""></h1>
-            <div class="lista-logo">
-                <div class="logo"><img src="img/design/ambev.svg" alt=""></div>
-                <div class="logo"><img src="img/design/warner.svg" alt=""></div>
-                <div class="logo"><img src="img/design/forno.svg" alt=""></div>
-                <div class="logo"><img src="img/design/loreal.svg" alt=""></div>
-                <div class="logo"><img src="img/design/sap.svg" alt=""></div>
-                <div class="logo"><img src="img/design/hotmart.svg" alt=""></div>
-                <div class="logo"><img src="img/design/tetra-pak.svg" alt=""></div>
-                <div class="logo"><img src="img/design/ifood.svg" alt=""></div>
-            </div>
-            <h2 class="inferior-rodape">+ outras 70 empresas incríveis</h2>
-        </div>
-    </section>
-    
-    <section class="Como-funciona"></section>
-    <section class="Demandas"></section>
+    <header>
+    </header>
+    <main>
+    </main>
     <footer class="footer-main">
         <div class="footer-main-area">
             <div class="container">
+            <a href="https://www.fstr.co/">
                 <img src="../FS14EQUIPE2/img/footer/footer-logo.svg" alt="Logo Faster">
+            </a>
+            <img src="../FS14EQUIPE2/img/footer/footer-radio.svg" alt="Icone Radio">
+        <button class="btn">
+            <a href="#" id="icone"><img src="../FS14EQUIPE2/img/footer/icone-botao.svg" alt="Icone Botão"></a>
+        </button>
+        <button class="btn2">
+            <a href="https://www.fstr.co/agendarreuniao">Agendar 20-min</a>
+        </button>
+            <nav class="links">
+                <ul>
+                    <a href="https://www.fstr.co/"><li>Home</li></a>
+                    <a href="https://www.fstr.co/#como-funciona"><li>Como Funciona</li></a>
+                    <a href="https://www.fstr.co/sobre-nos"><li>Sobre Nós</li></a>
+                </ul>
+            </nav>
             </div>
-        <nav class="footer-nav">
-            <ul>
-                <li>Home</li>
-                <li>Como Funciona</li>
-                <li>Sobre Nós</li>
-            </ul>
-        </nav>
         </div>
-        <div>
-            <p>© 2023 Faster. Todos os direitos reservados.</p>
+        <div class="footer-social">
+            <div class="zoom1">
+            <a href="https://www.instagram.com/faster_br/"><img src="../FS14EQUIPE2/img/footer/social-instagram.svg" alt=" icone instagram"></a>
+            </div>
+            <div class="zoom2">
+            <a href="https://www.linkedin.com/company/fasterdesign/"><img src="../FS14EQUIPE2/img/footer/social-linkedin.svg" alt="icone linkedin"></a>
+            </div>
         </div>
+        <p class="footer-texto">© 2023 Faster. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
